--- a/JS DrumKit/style.css
+++ b/JS DrumKit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(https://images.unsplash.com/photo-1511220043390-e929fe0edf55?ixlib=rb-0.3.5&s=d327150ad68af513021310ffef6a1a60) bottom center;
+  background: url(https://grapevineonline.in/wp-content/uploads/2015/09/slamkoning-martin-garrix-wallpaper-music-images-matin-garrix-wallpaper.jpg) bottom center;
   background-size: cover;
 }
 body,html {
